(include_subdirs unqualified)

(alias
 (name default)
 (deps
  (source_tree www)))

(executable
 (name main)
 (modules Main)
 (libraries incr_dom gg virtual_dom.svg)
 (modes js)
 (js_of_ocaml
  (flags
   (:include js-of-ocaml-flags-%{profile})))
 (preprocess
  (pps js_of_ocaml-ppx ppx_let ppx_sexp_conv)))

(rule
 (write-file
  js-of-ocaml-flags-dev
  "(:standard --no-inline --debug-info --source-map)"))

(rule
 (write-file js-of-ocaml-flags-release "(:standard)"))
